--- a/parts/bounty.jade
+++ b/parts/bounty.jade
@@ -5,9 +5,8 @@ template(name='bounties')
                 .ui.inline.header 
                     i.big.bounties.icon
                     |bounties
-                .ui.large.icon.basic.circular.button.add_item
-                    i.bounties.icon
-                    |+ item
+                .ui.large.icon.basic.circular.button.add_bounty
+                    i.plus.icon
                 // i.large.clock.icon
                 // i.large.thumbs.up.icon
                 .ui.icon.transparent.input
@@ -29,9 +28,56 @@ template(name='bounties')
                     +tag_picker
                         
             .thirteen.wide.column
-                .ui.header 
-                    i.bounties.icon
-                    |available bounties items
+                div(class=main_column_class)
+                    // .ui.disabled.button shared with me
+                    if skv_is 'view_sidebar' false
+                        .ui.icon.compact.basic.circular.button.enable_sidebar
+                            i.ellipsis.vertical.icon
+                    else
+                        .ui.icon.compact.active.circular.button.disable_sidebar
+                            i.ellipsis.vertical.icon
+                    if skv_is 'sort_direction' 1
+                        .ui.icon.compact.basic.button.sort_down
+                            i.caret.down.icon
+                    else
+                        .ui.icon.compact.basic.button.sort_up
+                            i.caret.up.icon
+                    .ui.compact.large.icon.basic.button.sort_created(class=sort_created_class)
+                        i.clock.icon
+                    .ui.compact.large.icon.basic.button.sort_ups(class=sort_ups_class)
+                        i.thumbs.up.icon
+                    if skv_is 'view_detail' true
+                        .ui.black.large.icon.compact.basic.button.toggle_detail
+                            i.list.icon
+                    else
+                        .ui.compact.large.icon.basic.button.toggle_detail
+                            i.minus.icon
+                        // i.line.chart.icon
+                    if skv_is 'view_layout' 'grid'
+                        .ui.compact.large.icon.black.button.set_grid(class=grid_class) 
+                            i.th.icon
+                    else
+                        .ui.compact.large.icon.basic.button.set_grid(class=grid_class) 
+                            i.th.icon
+                    if skv_is 'view_layout' 'list'
+                        .ui.compact.black.icon.large.button.set_list(class=list_class)
+                            i.list.icon
+                    else
+                        .ui.compact.large.icon.basic.button.set_list(class=list_class)
+                            i.list.icon
+                    .ui.circular.icon.basic.button.skip_left
+                        i.chevron.left.icon
+                    .ui.circular.icon.basic.button.skip_right
+                        i.chevron.right.icon
+                    .ui.icon.button
+                        i.film.icon
+                    .ui.icon.button
+                        i.picture.icon
+                    .ui.icon.button
+                        i.chat.icon            
+                    .ui.input
+                        input(type='text' )
+            
                 .ui.input
                     input(type='text' )
                 .ui.stackable.centered.cards
