--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -13,7 +13,7 @@ template(name='nav')
             a.icon.item.blink.clear.go_shop(href="/shop" class="{{isActiveRoute 'shop'}}")
                 i.line.shop.large.icon
             a.icon.item.blink.clear.go_shop(href="/bounties" class="{{isActiveRoute 'bounties'}}")
-                i.line.hand.holding.large.icon
+                i.line.hand.holding.heart.large.icon
             a.icon.item.blink.clear(href="/users" class="{{isActiveRoute 'users'}}")
                 i.users.large.icon
         // .item(title='session karma')
