slight group updates, add smallscroll and comments to card

--- a/parts/client/home.jade
+++ b/parts/client/home.jade
@@ -142,7 +142,7 @@ template(name='home')
                 i.picture.icon
             .ui.icon.button
                 i.chat.icon            
-            .ui.stackable.two.cards.scrolling
+            .ui.stackable.three.cards.scrolling
                 if skv_is 'view_layout' 'grid'
                     each posts
                         +post_card
