--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -36,7 +36,8 @@ template(name='layout')
     +nav
     .ui.bottom.attached.pushable.segment
         // +topbar
-        +right_sidebar
+        +leftbar
+        +rightbar
                 
         #main_area.global_container.pusher
             +yield
