--- a/parts/client/love.jade
+++ b/parts/client/love.jade
@@ -1,5 +1,5 @@
 template(name='love')
-    .ui.padded.grid
+    .ui.padded.stackable.grid
         .sixteen.wide.center.aligned.column.smallscroll
             // .ui.header 
             //     i.heart.icon
