--- a/parts/client/post.jade
+++ b/parts/client/post.jade
@@ -61,8 +61,8 @@ template(name='post_edit')
         .ui.stackable.grid
             .row
                 .four.wide.column.scrolling
-                    a.ui.icon.big.button(href="/p/#{_id}/view" title='save')
-                        i.checkmark.big.green.icon
+                    a.ui.icon.big.green.circular.button(href="/p/#{_id}/view" title='save')
+                        i.checkmark.big.icon
                     .ui.inline.header 
                         i.pencil.icon
                         | post
