--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -1,17 +1,17 @@
 template(name='nav')
     .ui.fluid.attached.borderless.inverted.large.menu.hscroll
-        // a.icon.item.toggle_sidebar.no_blink
-        //     i.bars.icon
+        a.icon.item.toggle_sidebar.no_blink
+            i.bars.icon
     
         a.icon.item.blink.clear(href="/" class="{{isActiveRoute regex='home'}}")
             i.yin.yang.large.icon
-        a.icon.item.blink.clear(href="/stats" class="{{isActiveRoute 'stats'}}")
+        a.icon.item.blink.clear.mobile.hidden(href="/stats" class="{{isActiveRoute 'stats'}}")
             i.line.chart.large.icon
         a.icon.item.blink.clear(href="/love" class="{{isActiveRoute 'love'}}")
             i.heart.outline.large.icon
-        a.icon.item.blink.clear.go_shop(href="/shop" class="{{isActiveRoute 'shop'}}")
+        a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
             i.line.shop.large.icon
-        a.icon.item.blink.clear.go_shop(href="/bounties" class="{{isActiveRoute 'bounties'}}")
+        a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
             i.line.hand.holding.heart.large.icon
         if currentUser
             a.icon.item.blink.clear(href="/users" class="{{isActiveRoute 'users'}}")
@@ -43,9 +43,9 @@ template(name='nav')
                         i.outline.bell.icon
                 // a.icon.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
                 //     i.inbox.icon
-                a.icon.item(href="/u/#{currentUser.username}/received" class="{{isActivePath 'user_received'}}" title="#{user.username} received")
+                a.icon.item.mobile.hidden(href="/u/#{currentUser.username}/received" class="{{isActivePath 'user_received'}}" title="#{user.username} received")
                     strong #{currentUser.points}
-                a.item(href="/u/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
+                a.item.mobile.hidden(href="/u/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
                     if currentUser.profile_image_id
                         if is_admin
                             i.shield.icon(title='admin mode on')
@@ -86,8 +86,8 @@ template(name='recent_alert')
             
             
             
-template(name='right_sidebar')
-    .ui.right.sidebar.vertical.borderless.inverted.large.menu
+template(name='rightbar')
+    .ui.right.sidebar.vertical.borderless.inverted.menu
         a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
             | dashboard (#{currentUser.points}p)
             i.dashboard.icon
@@ -131,3 +131,32 @@ template(name='right_sidebar')
                 i.sign.out.icon
 
 
+
+
+template(name='leftbar')
+    .ui.left.sidebar.vertical.borderless.inverted.menu
+        // a.item.toggle_sidebar.no_blink(href="/" class="{{isActiveRoute '/'}}")
+        //     img.ui.avatar.compact.image(src="{{c.url 'one_logo' height=200 width=200 gravity='face' crop='fill'}}")
+        //     |One
+        // a.item.set_member.toggle_sidebar.no_blink(href="/m/member" class="{{isActivePath 'm/member'}}" title='players')
+        a.item.toggle_sidebar.no_blink(href="/users" class="{{isActivePath 'users'}}" title='users')
+            i.users.icon
+            | users
+        a.item.toggle_sidebar.no_blink(href="/events" class="{{isActivePath '/events'}}")
+            i.calendar.icon
+            |events
+        a.item.toggle_sidebar.no_blink(href="/m/request" class="{{isActivePath '/m/request'}}")
+            i.concierge.bell.icon
+            |requests
+        a.icon.item.blink.clear.mobile.hidden.toggle_sidebar(href="/stats" class="{{isActiveRoute 'stats'}}")
+            i.line.chart.large.icon
+            |stats
+        a.icon.item.blink.clear.toggle_sidebar(href="/love" class="{{isActiveRoute 'love'}}")
+            i.heart.outline.large.icon
+            |love
+        a.icon.item.blink.clear.go_shop.mobile.hidden.toggle_sidebar(href="/shop" class="{{isActiveRoute 'shop'}}")
+            i.line.shop.large.icon
+            |shop
+        a.icon.item.blink.clear.go_shop.mobile.hidden.toggle_sidebar(href="/bounties" class="{{isActiveRoute 'bounties'}}")
+            i.line.hand.holding.heart.large.icon
+            |bounties
