sort of working reddit back

--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -99,7 +99,7 @@ template(name='tip')
         
 template(name='comments')
     div
-    .ui.fluid.icon.large.input
+    .ui.fluid.icon.input
         i.plus.icon
         input.add_comment(model='text' placeholder='comment (-1p from author, +1p to op')
     .ui.comments
