--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -9,6 +9,8 @@ template(name='nav')
             i.line.chart.large.icon
         a.icon.item.blink.clear(href="/love" class="{{isActiveRoute 'love'}}")
             i.heart.outline.large.icon
+        a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
+            i.reddit.large.icon
         a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
             i.line.shop.large.icon
         a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
