add stack files, way too slow, cloud

--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -169,6 +169,8 @@ template(name='events_column')
                                 if is_dev
                                     +remove_button
 
+template(name='loading')
+    i.massive.yin.yang.loading.grey.icon
 
 
 template(name='month_selector')
