--- a/parts/group.jade
+++ b/parts/group.jade
@@ -176,7 +176,7 @@ template(name='group_posts')
                 // #clear_tags.ui.black.icon.compact.button
                 //     i.remove.icon
                 each selected_group_tags
-                    .unselect_tag.ui.black.compact.button
+                    .unpick_tag.ui.black.compact.button
                         strong #{this}
             each all_tags
                 // +group_selector
