disable most of the site, making stack work

--- a/parts/client/stack/stack.jade
+++ b/parts/client/stack/stack.jade
@@ -8,7 +8,7 @@ template(name='stack')
                 .ui.icon.input
                     i.search.icon
                     input.search_site_name(type='text')
-                +cloud filter='stack_site'
+                // +cloud filter='stack_site'
                 // .spacer
                 unless site_docs.count
                     i.big.loading.yin.yang.icon
