--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -11,6 +11,8 @@ template(name='nav')
             i.heart.outline.large.icon
         a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
             i.reddit.large.icon
+        a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
+            i.stack.exchange.large.icon
         a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
             i.line.shop.large.icon
         a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
