remove users stuff, working minimal

--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -33,11 +33,11 @@ head
 
 
 template(name='layout')
-    +nav
+    // +nav
     .ui.bottom.attached.pushable.segment
         // +topbar
-        +leftbar
-        +rightbar
+        // +leftbar
+        // +rightbar
                 
         #main_area.global_container.pusher
             +yield
