simpler file structure, working array_edit, round of user ref removals

--- a/client/home.jade
+++ b/client/home.jade
@@ -158,7 +158,7 @@ template(name='post_card')
             a.ui.icon.large.basic.circular.button(href="/p/#{_id}/view")
                 |#{views}
                 i.chevron.right.large.icon
-           
+           +comments
            
                                 
 template(name='post_item')
