--- a/client/style.css
+++ b/client/style.css
@@ -727,7 +727,7 @@ input {
     /*z-index:1001;*/
     /*margin-top: 1em; */
     /*padding-top: .5em; */
-    padding: 2em;
+    padding-top: 2em !important;
     /*padding-left: 1em;*/
 }
 .forty {
