--- a/client/fields.jade
+++ b/client/fields.jade
@@ -501,21 +501,21 @@ template(name='datetime_view')
     strong #{field_value}
 
 template(name='array_edit')
-    .spacer
-    if icon
-        i.grey.icon(class=icon)
-        // +icon name=icon cl='ui avatar image'
-    .ui.inline.header
-        |#{field_value.length}
-        if title
-            |#{title}
-        else if label
-            |#{label}
-        else if key
-            |#{key}
+    // .spacer
+    // if icon
+    //     i.grey.icon(class=icon)
+    //     // +icon name=icon cl='ui avatar image'
+    // .ui.inline.header
+    //     |#{field_value.length}
+    //     if title
+    //         |#{title}
+    //     else if label
+    //         |#{label}
+    //     else if key
+    //         |#{key}
     .ui.icon.input
-        i.icon(class=i)
-        input.new_element(type='text' placeholder='+' autocomplete="off")
+        i.icon(class=icon)
+        input.new_element(type='text' placeholder="#{field_value.length} #{label}" autocomplete="off")
         //- +clear_value                
     if field_value
         each field_value
@@ -572,79 +572,6 @@ template(name='array_view')
             .ui.label.say_body #{this}
 
 
-template(name='children_edit')
-    div
-    .ui.inline.header 
-        |#{title}
-    .ui.icon.large.button.add_child(title="add child #{ref_model}")
-        i.plus.icon
-    .ui.styled.fluid.accordion
-        each children
-            +child_edit
-
-
-template(name='child_edit')
-    .title
-        .ui.header child doc: #{title} #{key} #{parent.slug}
-    .content
-        each child_fields
-            +Template.dynamic template=edit_template 
-        +remove_button
-        //-     +text_edit key='key'
-        //-     +text_edit key='field'
-        //-     +single_doc_edit key='field' ref_model='field_type' ref_key='slug' label='Field Type'
-        //-     +text_edit key='label'
-        //-     +text_edit key='icon'
-        //-     if icon
-        //-         i.big.icon(class=icon)
-        //- div
-              //- if is_reference
-        
-        //     +single_doc_edit key='ref_model' ref_model='model' ref_key='slug' label='Referenced model (if ref)'
-        //     .ui.divider
-template(name='children_view')
-    .ui.accordion
-        .title
-            //- if icon
-            //-     +i name=icon                
-            .ui.inline.header
-                if title
-                    |#{title}
-                else if label
-                    |#{label}
-                else if key
-                    |#{key}
-                else
-                    |#{this}
-                i.dropdown.icon
-        .content
-            each children
-                .ui.smoothed.segment
-                    +child_view
-
-
-template(name='child_view')
-    each child_fields
-        //- |#{rank} #{title} #{title}
-        //- |#{key}
-        +Template.dynamic template=view_template 
-    +remove_button
-    +view_button
-        // if field_template
-        //     .ui.header field template #{field_template}
-        // else 
-        // .ui.segment
-        //     +text_edit key='key'
-        //     // +text_edit key='field'
-        //     +single_doc_edit key='field' ref_model='field' ref_key='slug' label='Field Type'
-        //     +text_edit key='label'
-        //     +text_edit key='icon'
-        //     if icon
-        //         i.big.icon(class=icon)
-        //     // if is_reference
-    
-        //     +single_doc_edit key='ref_model' ref_model='model' ref_key='slug' label='Referenced model (if ref)'
-        //     .ui.divider
 template(name='boolean_edit')
     //- div
     .ui.circular.basic.button.toggle_boolean(class="#{boolean_toggle_class} #{classes}" title=tooltip)
@@ -806,269 +733,6 @@ template(name='float_view')
             else
                 |#{this}
         .ui.inline.large.header #{field_value}
-
-template(name='slug_edit')
-    if icon
-        i.grey.icon(class=icon)
-    .ui.inline.header.pointer.slugify_title
-        if title
-            |#{title}
-        else if label
-            |#{label}
-        else if key
-            |#{key}
-        // small (auto slugify)
-    //- +clear_value
-    .ui.icon.fluid.input
-        input.edit_text(type='text' value=field_value placeholder=placeholder autocomplete="off")
-
-template(name='slug_view')
-    if field_value
-        unless header
-            div
-            //- if icon
-            //-     +i name=icon                
-            .ui.inline.header
-                if title
-                    |#{title}
-                else if label
-                    |#{label}
-                else if key
-                    |#{key}
-                else
-                    |#{this}
-        .ui.inline.header #{field_value}
-
-
-
-template(name='single_doc_view')
-    div
-    if field_value
-        if icon
-            //- i.grey.icon(class=icon)
-            +icon name=icon
-        .ui.inline.header(title=key)
-            |#{title}
-        .ui.label
-            if icon
-                //- i.grey.icon(class=icon)
-                +icon name=icon cl='ui avatar image'
-            |#{field_value}
-
-
-template(name='single_doc_edit')
-    div
-    .ui.inline.header(title=key) 
-        if icon
-            //- i.grey.icon(class=icon)
-            +icon name=icon
-        |#{label} #{title}
-    each choices
-        .ui.compact.button.select_choice(class=choice_class)
-            if icon
-                //- i.grey.icon(class=icon)
-                +icon name=icon cl='ui middle aligned mini image'
-                //- +i name=icon cl='ui mini inline image'
-            |#{calculated_label}
-            |#{slug} #{title}
-
-
-template(name='multi_doc_edit')
-    div
-    if icon
-        +icon name=icon cl='ui mini inline image'
-    .ui.inline.header(title=key)
-        |#{title} #{label}    
-    each choices
-        .ui.compact.button.select_choice(class=choice_class)
-            if icon
-                //- i.grey.icon(class=icon)
-                +icon name=icon cl='ui inline image'
-            //- |#{title} #{slug}
-            |#{slug}
-    //- .ui.sub.header 
-    //-     if icon
-    //-         i.grey.icon(class=icon)
-    //-     |#{title}
-    //- select.ui.fluid.multiple.selection.dropdown(multiple='')
-    //-     each choices
-    //-         option(value=slug) #{title} #{unit_number}
-    //- .ui.fluid.multiple.selection.dropdown
-    //-  // input(type='hidden' name='multi_doc_edit')
-    //-  // i.dropdown.icon
-    //-  // .default.text 
-    //-  //     |#{title}
-    //-  // .menu
-    //-  //     each choices
-    //-  //         .item(data-value=slug) 
-    //-  //             if icon
-    //-  i.grey.icon(class=icon)
-    //-  //             |#{title}
-    
-    
-    
-template(name='multi_doc_view')
-    div
-    //- if icon
-    //-     +i name=icon cl='ui mini inline image'
-    if field_value
-        .ui.inline.header(title=key)
-            |#{title} #{label}
-        each sorted_field_values
-            .ui.large.label
-                |#{this}
-
-
-
-template(name='single_user_edit')
-    div
-    if icon
-        i.icon(class=icon)
-    .ui.inline.header 
-        |#{label} #{title}
-    // if field_value
-    //     .pull_user.ui.icon.compact.button(title='remove user')
-    //         i.remove.icon
-            //- |clear #{field_value}
-    unless field_value
-        .ui.input
-            input#single_user_select_input(type='text' placeholder='lookup user..' autocomplete='off')
-            each selections
-                .ui.large.label
-                    |#{name} 
-                .ui.mini.grey.inline.header 
-                    |#{username}
-        if user_results
-            .ui.attached.smoothed.segment
-                .ui.middle.aligned.selection.animated.list
-                    each user_results
-                        a.select_user.item(href='#')
-                            .ui.small.inline.header
-                                img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                                |#{first_name} #{last_name}
-                            .ui.mini.grey.inline.header 
-                                |#{username}
-    if field_value
-        // +user_card field_value
-        if is_dev
-            |#{field_value}
-        //- |#{this}
-        with user_from_id field_value
-            .ui.inline.header
-                img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                |#{name}
-            i.pull_user.remove.link.icon
-
-
-template(name='single_user_view')
-    if field_value
-        div
-        if icon
-            +icon name=icon    
-        .ui.inline.header 
-            |#{title}
-            |#{label}
-        with field_value
-            with user_from_id this
-                +user_item
-            
-
-
-
-template(name='multi_user_edit')
-    div
-    .ui.inline.header
-        if icon
-            i.icon(class=icon)
-            //- +i name=icon
-        if title
-            |#{title}
-        else if label
-            |#{label}
-        else if key
-            |#{key}
-        else
-            |#{this}
-    .ui.input
-        input#multi_user_select_input(type='text' placeholder="lookup #{role_filter}.." autocomplete='off')
-    each selections
-        a.ui.large.label(href="/u/#{username}")
-            |#{name}
-    if user_results
-        .ui.top.attached.segment
-            .ui.middle.aligned.selection.animated.list
-                each user_results
-                    a.select_user.item(href="#")
-                        .ui.header
-                            img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                            strong #{first_name} #{last_name}
-                            small @#{username}
-    +clear_value                
-    each field_value
-        // |#{this}
-        with user_from_id this
-            div
-            .ui.inline.header
-                img.ui.avatar.image(src="{{c.url profile_image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                |#{name}
-            i.pull_user.remove.link.icon
-
-template(name='multi_doc_input')
-    //- .ui.form
-        //- .ui.inline.header
-        //-     if icon
-        //-         i.grey.icon(class=icon)
-        //-     if title
-        //-         |#{title}
-        //-     else if label
-        //-         |#{label}
-        //-     else if key
-        //-         |#{key}
-        //-     else
-        //-         |#{this}
-    .ui.big.input
-        input#multi_doc_select_input(type='text' placeholder=title autocomplete="off")
-        //- input#multi_doc_select_input(type='text' placeholder="Lookup #{ref_model}.." autocomplete="off")
-    each selections
-        .ui.large.label
-            |#{guest_name} #{first_name} #{last_name}
-    if doc_results
-        .ui.attached.secondary.segment
-            .ui.middle.aligned.selection.animated.list
-                each doc_results
-                    .select_doc.item
-                        h2.ui.header
-                            //- img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                            strong + #{guest_name} #{first_name} #{last_name}
-        //- +clear_value                
-        //- .ui.list
-        //-     each field_value
-        //-         // |#{this}
-        //-         +user_card
-        //-         .ui.large.button
-        //-             |#{first_name} #{last_name}
-                //- with user_from_id
-                //-     .item
-                //-         .right.floated.content
-                //-             i.pull_user.remove.link.icon
-                //-         .image
-                //-             img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                //-         .content
-                //-             h4.ui.header
-                //-                 |#{first_name} #{last_name}
-                //-                 @#{username}
-template(name='multi_user_view')
-    .ui.header 
-        if icon 
-            i.icon(class=icon)
-        |#{field_value.length}
-        |#{title} #{label}
-        //- #{key} #{label}
-    each field_value
-        with user_from_id this
-            +user_item
-            div
-            
 
 
     
