--- a/client/client.jade
+++ b/client/client.jade
@@ -24,12 +24,12 @@ head
     link(rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css")
     script(src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js")
     // script(async src="https://www.googletagmanager.com/gtag/js?id=G-GLYPPRGJFQ")
-    // script.
-    //     window.dataLayer = window.dataLayer || [];
-    //     function gtag(){dataLayer.push(arguments);}
-    //     gtag('js', new Date());
+    script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
         
-    //     gtag('config', 'G-GLYPPRGJFQ');
+        gtag('config', 'G-GLYPPRGJFQ');
 
 
 template(name='layout')
@@ -42,3 +42,96 @@ template(name='not_found')
         a(href="/")
             i.massive.yin.yang.grey.link.icon.pulse
 
+template(name='post_view')
+    with current_doc
+        .ui.stackable.grid
+            .row 
+                .twelve.wide.column.scrolling
+                    .ui.center.aligned.header #{title}
+                    if image_link
+                        +image_link_view key='image_link' direct=true
+                    if image_id
+                        img.ui.fluid.rounded.image.no_left(src="{{c.url image_id }}" class=currentUser.invert_class)
+                    if youtube_id
+                        .no_left
+                            +youtube_view key='youtube_id' label='youtube id' direct=true
+                    if raw 
+                        |!{raw}
+                    .say_this.say_body.f11
+                        |!{content}
+                    .say_this.say_body.f11
+                        |!{description}
+                    .say_this.say_body.f11
+                        |!{body}
+                    div 
+                    .spacer
+                    .spacer
+                    +comments
+                    div
+                .four.wide.column.scrolling
+                    a.ui.large.icon.basic.button(href="/")
+                        i.chevron.left.large.icon
+                        i.large.home.icon
+                    if in_dev
+                        a.ui.icon.large.basic.button(href="/p/#{_id}/edit")
+                            i.big.pencil.icon
+                    i.large.eye.icon
+                    | #{views} views
+                    +array_edit key='tags' label='tags' direct=true
+                    +link_view key='link' label='link' direct=true
+                    +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    i.large.thumbs.up.icon.voteup
+                    i.large.thumbs.down.icon.anon_votedown
+                    +print_this
+                    
+   
+                    
+                    
+template(name='post_edit')
+    with current_doc
+        .ui.stackable.grid
+            .row
+                .four.wide.column.scrolling
+                    a.ui.icon.big.button(href="/p/#{_id}/view" title='save')
+                        i.checkmark.big.green.icon
+                    .ui.inline.header 
+                        i.pencil.icon
+                        | post
+                    i.large.link.remove.icon.delete_post
+                    div
+                    +array_edit key='tags' label='tags' direct=true
+                    // +raw_edit key='raw' label='raw' direct=true
+                    +boolean_edit key='private' label='private' direct=true
+                    +text_edit key='group' label='group' direct=true
+                    +key_value_edit k='privacy' v='public' i='users'
+                    +key_value_edit k='privacy' v='private' i='lock'
+                    if key_value 'privacy' 'private'
+                        +key_value_edit k='private_setting' v='friends' i='users'
+                .twelve.wide.column.scrolling
+                    +boolean_edit key='has_title' icon='text' label='title'
+                    +boolean_edit key='has_html' icon='content' label='content'
+                    +boolean_edit key='has_image_link' icon='image' label='image link'
+                    +boolean_edit key='has_image_upload' icon='image' label='image upload'
+                    +boolean_edit key='has_youtube' icon='youtube' label='youtube'
+                    +boolean_edit key='has_link' icon='link' label='link'
+                    +boolean_edit key='can_buy' icon='shop' label='can buy'
+                    if has_title
+                        +text_edit key='title' label='title' direct=true
+                    if has_html
+                        +html_edit key='content' label='content' direct=true
+                    if has_image_link
+                        +image_link_edit key='image_link' direct=true
+                    if has_youtube
+                        +youtube_edit key='youtube_id' label='youtube id' direct=true
+                    if has_link
+                        +link_edit key='link' label='link' direct=true
+                    if has_location_tags
+                        +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    if has_time_tags
+                        +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                    if has_image_upload
+                        +image_edit key='image_id' label='image' direct=true
+                    if can_buy
+                        +text_edit key='unit_name' label='unit name'
+                        +number_edit key='karma_price' label='karma price'
