--- a/client/fields.jade
+++ b/client/fields.jade
@@ -87,11 +87,11 @@ template(name='html_edit')
         .field.testsun
             textarea#sample.sun-editor-editable
                 |#{field_value}
-    +call_watson mode='html' key='content'
+    // +call_watson mode='html' key='content'
     //- div
     //- //- +tone mode='html'
-    if watson
-        +watson_view
+    // if watson
+    //     +watson_view
 
 
 
@@ -113,6 +113,9 @@ template(name='color_icon_edit')
         //- img.ui.inline.image(src="https://img.icons8.com/dusk/48/000000/#{field_value}.png")
         img.ui.inline.image(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
         //- img.ui.inline.image(src="https://img.icons8.com/office/48/000000/#{field_value}.png")
+        
+        
+        
 template(name='icon_edit')
     div
     if icon
@@ -141,6 +144,8 @@ template(name='color_icon_view')
         //- img(src="https://img.icons8.com/dusk/48/000000/#{field_value}.png")
         //- img(src="https://img.icons8.com/office/48/000000/#{field_value}.png")
         //- img(src="https://img.icons8.com/ios/48/000000/#{field_value}.png")
+        
+        
 template(name='icon_view')
     if field_value
         span.inline.spaced
@@ -149,6 +154,9 @@ template(name='icon_view')
         //- img(src="https://img.icons8.com/office/48/000000/#{field_value}.png")
         //- img(src="https://img.icons8.com/fluent/48/000000/#{field_value}.png")
         //- img(src="https://img.icons8.com/ios/48/000000/#{field_value}.png")
+        
+        
+        
 template(name='i')
     //- i.icon(class=name)
     img(src="https://img.icons8.com/cotton/48/000000/#{name}.png" class=cl title=title)
@@ -161,6 +169,9 @@ template(name='i')
     //- else 
     //-     img.ui.mini.inline.image(src="https://img.icons8.com/#{gs.icon_theme}/48/000000/#{name}.png" class=cl title=title)
     //- img(src="https://img.icons8.com/plasticine/48/000000/#{name}.png" class=cl title=title)
+    
+    
+    
 template(name='ioffice')
     img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=cl title=title)
 template(name='icolor')
@@ -182,7 +193,10 @@ template(name='iios')
 //-     //- img.ui.inline.image(src="https://img.icons8.com/#{gs.icon_theme}/24/000000/#{name}.png" class=cl title=title)
 //-     //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=cl title=title)
 //-     //- img(src="https://img.icons8.com/ios/24/000000/#{name}.png" class=cl title=title) 
-//-     //- |&nbsp;
+//-     //- |&nbsp
+
+
+
 template(name='iblue')
     img(src="https://img.icons8.com/ultraviolet/40/000000/#{name}.png" class=cl)
 
