--- a/client/home.jade
+++ b/client/home.jade
@@ -106,17 +106,14 @@ template(name='home')
             .ui.stackable.three.cards.scrolling
                 if skv_is 'view_layout' 'grid'
                     each posts
-                        if key_value_is 'model' 'rpost'
-                            +rpost_card
-                        else
-                            +post_card
+                        +post_card
                 else 
                     .ui.divided.link.items
                         each posts
                             +post_item
 
 template(name='post_card')
-    .ui.card.mark_viewed.penny.add_global_karma(class=card_class)
+    .ui.card.mark_viewed(class=card_class)
         if image_link
             a(href="/p/#{_id}/view")
                 img.ui.zoomer.image(src=image_link)
@@ -138,20 +135,16 @@ template(name='post_card')
             // .ui.tiny.icon.input
             //     i.grey.tag.icon
             //     input.add_tag(type='text' placeholder='+')
-            // each tags
-            //     +flat_tag_picker
+            each tags
+                +flat_tag_picker
                 // .ui.small.compact.button.pick_flat_tag #{this}
             // each timestamp_tags
             //     .ui.small.compact.button.pick_flat_time #{this}
             if location
                 i.grey.marker.icon
                 |#{location}
-            // if author
-            //     i.grey.user.outline.icon
-            //     |#{author}
             if in_dev
                 +print_this
-                    // .ui.label #{this}
         .content
             if in_dev
                 i.large.lock.link.circular.grey.icon.make_private
@@ -162,7 +155,7 @@ template(name='post_card')
            
                                 
 template(name='post_item')
-    .ui.item.mark_viewed.penny.add_global_karma(class=card_class)
+    .ui.item.mark_viewed(class=card_class)
         if image_link
             a(href="/p/#{_id}/view")
                 img.ui.zoomer.small.image(src=image_link)
@@ -183,11 +176,11 @@ template(name='post_item')
             |#{when}
             // a(href="/p/#{_id}/view")
             //     |!{content}
-            +voting_full
+            +voting
             // .ui.tiny.icon.input
             //     i.grey.tag.icon
             //     input.add_tag(type='text' placeholder='+')
-            each five_tags
+            each seven_tags
                 +flat_tag_picker
                 // .ui.small.compact.button.pick_flat_tag #{this}
             if skv_is 'view_detail' true
@@ -196,28 +189,22 @@ template(name='post_item')
             if location
                 i.grey.marker.icon
                 |#{location}
-            if currentUser
-                |#{_author_username}
             // if author
             //     i.grey.user.outline.icon
             //     |#{author}
             if in_dev
                 +print_this
-            each viewer_ids
-                .ui.label #{this}
         .content
-            if is_author
+            if in_dev
                 i.large.lock.link.circular.grey.icon.make_private
-            else if in_dev
-                i.large.lock.link.circular.grey.icon.make_private
-            a.ui.icon.large.basic.circular.button(href="/p/#{_id}/view")
+            a.ui.icon.large.basic.button(href="/p/#{_id}/view")
                 |#{views}
                 i.chevron.right.large.icon
                                 
                                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tertiary.button.zoomer.pick_tag.penny.add_global_karma(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tertiary.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -226,7 +213,7 @@ template(name='tag_picker')
         //     small #{count}
         
 template(name='unpick_tag')
-    a.unpick_tag.ui.large.black.compact.button.no_blink.penny.add_global_karma(href='#')
+    a.unpick_tag.ui.large.black.compact.button.no_blink(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -236,7 +223,7 @@ template(name='unpick_tag')
         
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tiny.button.zoomer.pick_flat_tag.penny.add_global_karma(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tiny.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
